# pwp

./: CMakeLists.txt  Makefile  README.rst  SConstruct  compvis.pro  compvis.sln  compvis.vcproj  configure
android/: AndroidManifest.xml  Makefile  ant.properties  local.properties  release.keystore
android/jni/: Android2.mk  Android_compvis.mk  Android_old.mk  Android_opencv.mk  Android_shared_cv.mk  Android_shared_cxcore.mk  Android_static_cv.mk  Android_static_cxcore.mk  Application.mk  cvfacedetector.cpp  cvfacedetector.h  cvjnimain.cpp  cvjnitest.cpp  cvjnitracker.cpp  cvjnitracker.h  helloneon.c
android/res/anim/: scale_up.xml
android/res/drawable/: button_background_color.xml  button_text_color.xml  layers.xml  shape.xml
android/res/layout/: capture.xml  editor.xml  main.xml
android/res/values/: strings.xml
android/src/com/liangfu/pwptracker/: CaptureActivity.java  CvTracker.java  CvTracker.java_  CvTrackerView.java  CvTrackerViewBase.java  EditorActivity.java  EditorImageView.java  EditorSurfaceView.java
android/src/com/liangfu/widgets/: Animation.java  Animator.java  FlingAnimation.java  FlingAnimationListener.java  FlingListener.java  GestureImageView.java  GestureImageViewListener.java  GestureImageViewTouchListener.java  MathUtils.java  MoveAnimation.java  MoveAnimationListener.java  VectorF.java  ZoomAnimation.java  ZoomAnimationListener.java
app/res/bitmaps/: addconst.py  go-next.xpm  go-previous.xpm  object-rotate-left.xpm  object-rotate-right.xpm  zoom-fit-best.xpm  zoom-in.xpm  zoom-original.xpm  zoom-out.xpm
app/src/: SConscript  canvas.cpp  canvas.h  main.cpp  mainwindow.cpp  mainwindow.h  makefile  tabsmgr.cpp  tabsmgr.h  vid_data.h
core/include/: compvis.h
core/src/: SConscript  cvio.cpp
demo/: SConscript  compvis.vcproj  demo.pro  demo.vcproj
demo/include/: canvas.h  imageviewer.h  mainwindow.h
demo/install/: compvis.nsi
demo/res/: res.qrc
demo/res/24x24/: addconst.py  cvt  zoom-in.xpm  zoom-original.xpm
demo/res/bitmaps/: go-next.xpm  go-previous.xpm  object-rotate-left.xpm  object-rotate-right.xpm  zoom-fit-best.xpm  zoom-out.xpm
demo/src/: compvis.ui
include/: _vatool.h  compvis.h  cvaam.h  cvchamfer.h  cvclassifier.h  cvclassifier4fdesc.h  cvext.h  cvext.hpp  cvext_c.h  cvext_io.h  cvfacecoder.h  cvhanddetector.h  cvhandtracker.h  cvhandvalidator.h  cvhog.h  cvhomography.h  cvimgwarp.h  cvinvcomp.h  cvkfd.h  cvkfd4hog.h  cvkfd4hog_template.h  cvlda.h  cvlevelset.h  cvmaxflow.h  cvparticlefilter.h  cvparticlestate.h  cvpictstruct.h  cvpwptracker.h  cvsgkfd.h  cvsgkfd4hog.h  cvsgkfd4hog_template.h  cvshapedesc.h  cvshapeprior.h  cvsparsecoding.h  cvsql.h  cvstageddetecthaar.h  cvstageddetecthog.h  cvstip.h  cvsvm4hog.h  cvtracker.h  (+5 more)
res/: mediaplayer.qrc
src/: SConscript  cvaam.cpp  cvchamfer.cpp  cvext_common.cpp  cvext_io.cpp  cvextutils.cpp  cvfacecoder.cpp  cvhanddetector.cpp  cvhandtracker.cpp  cvhandvalid_data.cpp  cvhandvalidator.cpp  cvhog.cpp  cvhog_data.cpp  cvimgwarp.cpp  cvinvcomp.cpp  cvkfd.cpp  cvlda.cpp  cvlevelset.cpp  cvmotion.cpp  cvparticlebase.cpp  cvparticlefilter.cpp  cvparticleobserve.cpp  cvparticlestate.cpp  cvpictstruct.cpp  cvpwptracker.cpp  cvsgkfd.cpp  cvshapedesc.cpp  cvshapeprior.cpp  cvshapeprior_data.cpp  cvsparsecoding.cpp  cvstageddetecthaar.cpp  cvstageddetecthog.cpp  cvstip.cpp  cvsuperres.cpp  cvsvm4hog.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  objectdialog.cpp  src.pro  (+2 more)
subdirs/: subdirs.pro
test/: SConscript  main00_template.cpp  main27_pwptracker_both.cpp  main36_face.cpp  main36_facetrain.cpp  makefile
ui/: ui.pro
ui/include/: imageviewer.h  mainwindow.h  meshviewer.h
ui/res/: res.qrc
ui/src/: compvis.ui  main.cpp  mainwindow.cpp  meshviewer.cpp
